More CI check fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ permissions:
   contents: read
   pull-requests: write
   issues: write
+  checks: write
   pages: write
   id-token: write
 
@@ -33,10 +34,15 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Clippy annotations
+        if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --workspace --all-features -- -D warnings
+
+      - name: Clippy (no annotations on forks)
+        if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository
+        run: cargo clippy --workspace --all-features -- -D warnings
 
       - name: Tests
         run: cargo test --workspace --all-features
